# ood-and-loc-aware-pointnets

./: README.md  ground_segmentation_benchmark.py  new_dataset_creator.py  outlier_extraction.py  run_pipeline.py
PointNets/: box_model.py  box_util.py  custom_models.py  dataset.py  json_file_creator.py  kitti_util.py  model_utils.py  provider.py  show_box.py  show_cls.py  train_bboxnet.py  train_bboxnet_energy.py  train_classification_energy.py
dbot_dataset/: readme.txt
depth_cluster/: CMakeLists.txt  Depth_Cluster.cpp  prepare_pybind.sh
kitti_dataset/: readme.txt
kitti_eval/: dbot_evaluate_object_3d  dbot_evaluate_object_3d.cpp  evaluate_object_3d  evaluate_object_3d_offline  evaluate_object_3d_offline.cpp
kitti_object_vis/: dbot_results_visualization.py  kitti_object.py  kitti_util.py  results_visualization.py  viz_util.py
scripts/: box_extraction_utils.py  calibration.py  custom_functions.c  custom_functions.pyx  merge_labels.py  plane_fit.py  setup.py
semanticKITTI/: readme.txt
weights/: box_30_6.pth  box_energy.pth  box_energy_249.pth  box_energy_249_2.pth  box_epoch_199.pth  box_epoch_248.pth  box_epoch_99.pth  box_flip_only.pth  box_flip_only_200.pth  box_flip_only_new.pth  box_kittitest.pth  box_no_data_aug.pth  box_no_pvle.pth  box_no_seed.pth  box_obs_angle_normalized.pth  box_obs_angle_normalized2.pth  box_obs_angle_normalized3.pth  box_obs_angle_normalized4.pth  box_shift_flip.pth  box_w_128p_voxel.pth  box_w_newdata.pth  box_weights_1_6.pth
